# trump_secrets

./: .dockerignore  .gitignore  Dockerfile  README.md  delete_last_record.py  docker-compose.yml  feed_fetcher.py  llm_summarize_v1.py  llm_summarize_v2.py  llm_summarize_v3.py  llm_summarize_v4_finance.py  pyproject.toml  summarize_feed_intel.py  trump_feed_parser.py
