[project]
name = "trump-feed"
version = "0.1.0"
description = ""
authors = [
    {name = "Anton Kalashnikov"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "numpy (>=2.2.5,<3.0.0)",
    "feedparser (>=6.0.11,<7.0.0)",
    "tinydb (>=4.8.2,<5.0.0)",
    "python-telegram-bot (>=22.0,<23.0)",
    "pytz (>=2025.2,<2026.0)",
    "torch (>=2.7.0,<3.0.0)",
    "transformers (>=4.51.3,<5.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "ollama (>=0.5.1,<0.6.0)",
    "google-genai (>=1.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.30.0"

